# Kaori-Hoshino

./: .gitignore  CMakeLists.txt
src/: main.cpp  ollama_client.cpp  ollama_client.hpp  personality.hpp
src/brain/: chat_history.hpp  extractor.hpp  memory.hpp
